                                 Muldis::D
---------------------------------------------------------------------------

2008-09-xx  Darren Duncan <perl@DarrenDuncan.net>

    * Muldis::D version 0.48.0 is released on CPAN as
    Muldis-D-0.48.0.tar.gz.

    * New file versions are: D.pm 0.48.0 and Routines.pod 0.31.0 and
    PTMD_Tiny.pod and Rational.pod 0.29.0 and Integer.pod and Set.pod
    0.27.0 and HDMD_Perl_Tiny.pod 0.26.0 and Temporal.pod 0.9.0.  The other
    pre-existing versioned files are unchanged.

    * Updated the README file to indicate that a new public repository at
    http://github.com/muldis/ is planned for the near future.

    * Updated the Makefile.PL to remove the obsolete warning message about
    a warning message that the POD manifyer might give.

    * (PTMD_Tiny.pod, HDMD_Perl_Tiny.pod)  Simplified 'Bag' literals by
    removing their format hint portion when the payload portion would be
    unambiguous without the hint.  In PTMD_Tiny.pod, no hints are necessary
    at all, so removed the ':count' and ':repeat' syntax entirely; then
    refactored the 3 'bag_\w+' tokens into 4 'bag_\w+' tokens.  In
    HDMD_Perl_Tiny.pod, the 'bag' PHMD node type can now have either 2 or 3
    elements; it must now have 2 when the payload is a Perl 6 Bag|KeyBag,
    and it must still have 3 when the payload is an Array|Seq; so the
    'perl_bag' hint is gone, but the 'aoa_counted' and 'array_repeated'
    hints remain (because there is ambiguity between the latter 2 in the
    general case when we have no hint, due to a 'name' node being a Str).

    * (PTMD_Tiny.pod, HDMD_Perl_Tiny.pod)  Simplified 'Rat' literals by
    removing or folding their format hint portion.  In PTMD_Tiny.pod, no
    hints are necessary at all, so removed the ':radix' and ':ratio' and
    ':float' syntax entirely; then refactored the 4
    'rat(|_with_radix|_as_(ratio|float))' tokens into 2 'rat(|_body)'