@@ -9,7 +9,7 @@ Muldis D general purpose routines
 
 =head1 VERSION
 
-This document is Muldis::D::Core::Routines version 0.30.0.
+This document is Muldis::D::Core::Routines version 0.31.0.
 
 =head1 PREFACE
 
