@@ -9,7 +9,7 @@ How to format Plain Text Muldis D
 
 =head1 VERSION
 
-This document is Muldis::D::Dialect::PTMD_Tiny version 0.27.0.
+This document is Muldis::D::Dialect::PTMD_Tiny version 0.29.0.
 
 =head1 PREFACE
 
@@ -104,8 +104,8 @@ at least.>  Any remaining errors should be corrected as soon as possible.
 
     use v6-alpha;
 
-    # grammar Muldis_D_PTMD_Tiny:auth<http://muldis.com>:ver<0.27.0>;
-    grammar Muldis_D_PTMD_Tiny-0.27.0-http://muldis.com;
+    # grammar Muldis_D_PTMD_Tiny:auth<http://muldis.com>:ver<0.29.0>;
+    grammar Muldis_D_PTMD_Tiny-0.29.0-http://muldis.com;
 
     token bootloader {
         (<language_name>)
