@@ -9,7 +9,7 @@ Muldis D extension for rational data types and operators
 
 =head1 VERSION
 
-This document is Muldis::D::Ext::Rational version 0.28.0.
+This document is Muldis::D::Ext::Rational version 0.29.0.
 
 =head1 PREFACE
 
