@@ -9,7 +9,7 @@ Muldis D extension for temporal data types and operators
 
 =head1 VERSION
 
-This document is Muldis::D::Ext::Temporal version 0.8.1.
+This document is Muldis::D::Ext::Temporal version 0.9.0.
 
 =head1 PREFACE
 
