@@ -1,10 +1,15 @@
                                  Muldis::D
 ---------------------------------------------------------------------------
 
-2008-09-xx  Darren Duncan <perl@DarrenDuncan.net>
+2008-09-18  Darren Duncan <perl@DarrenDuncan.net>
 
     * Muldis::D version 0.48.0 is released on CPAN as
     Muldis-D-0.48.0.tar.gz.
+
+    * Fixed the version numbers inside the 2 files PTMD_Tiny.pod and
+    HDMD_Perl_Tiny.pod; they should have been 0.28.0 and 0.25.0
+    respectively in Muldis-D-0.47.0 but were mistakenly not incremented
+    like the Changes file of that release said they were.
 
     * New file versions are: D.pm 0.48.0 and Routines.pod 0.31.0 and
     PTMD_Tiny.pod and Rational.pod 0.29.0 and Integer.pod and Set.pod
